Corrected small visual problem (navbar collapse border color was white, too flashy)

--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -171,6 +171,9 @@ h1 .fa-tasks {
     background-color: #0554a6;
 }
 
+.navbar-default .navbar-collapse {
+    border-color : #1e73ba;
+}
 
 @media screen and (max-width: 992px) {
     .login-panel {
